[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Characters/Xmachine/Xmachine.gd" type="Script" id=2]
[ext_resource path="res://art/Cartoon/Xmachine/idle/idle_1.png" type="Texture" id=3]
[ext_resource path="res://art/Cartoon/Xmachine/fall/fall_1.png" type="Texture" id=4]
[ext_resource path="res://art/Cartoon/Xmachine/fall/fall_2.png" type="Texture" id=5]
[ext_resource path="res://art/Cartoon/Xmachine/fall/fall_3.png" type="Texture" id=6]
[ext_resource path="res://art/Cartoon/Xmachine/fall/fall_4.png" type="Texture" id=7]
[ext_resource path="res://art/Cartoon/Xmachine/fall/fall_5.png" type="Texture" id=8]
[ext_resource path="res://art/Cartoon/Xmachine/bullet/bullet_blast1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "hit",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/muzzle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/muzzle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.9 ), Vector2( 0.6, 0.7 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "init"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/muzzle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Xmachine" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
position = Vector2( -0.050703, 41.9977 )
frames = SubResource( 1 )
animation = "Idle"
offset = Vector2( 0.050703, -41.9977 )

[node name="muzzle" type="Sprite" parent="Sprite" index="0"]
show_behind_parent = true
position = Vector2( -60, -58.541 )
scale = Vector2( 0.68, 0.78 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "init"
anims/fire = SubResource( 2 )
anims/init = SubResource( 3 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
